--- a/index.html
+++ b/index.html
@@ -7,7 +7,60 @@
     <title>Bem-vindo</title>
 </head>
 <body>
-    <h1>Olá, Mundo</h1>
-    <hr><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde minima iusto perspiciatis ducimus animi amet, consequuntur tempora nobis adipisci, error distinctio iste nesciunt ipsam? Soluta laudantium sapiente enim explicabo quod.</p>
+    <h1>
+        Olá, Mundo!
+    </h1>
+    <h2>
+        Site para apresentação pessoal.
+    </h2>
+    <img src="imagens/foto.jpeg" width="300" height="300" alt="Foto Pessoal">
+    <span>
+        André Henrique dos Santos.
+    </span>
+    <span>
+        26 anos.
+    </span>
+    <span>
+        Taquarituba-SP.
+    </span>
+    <h2>
+        Informações Pessoais.
+    </h2>
+    <p>
+        Atualmente sou estudante do último ano de 
+        ciência da computação na Universidade Estadual
+        Paulista (UNESP) câmpus de Presidente Prudente e 
+        sou estagiário da Tata Consultanncy Services (TCS).
+    </p>
+    <h2>
+        Histórico Pessoal.
+    </h2>
+    <table>
+        <tr>
+            <th>Local</th>
+            <th>Curso</th>
+            <th>Ano Início</th>
+            <th>Ano Fim</th>
+        </tr>
+        <tr>
+            <td>ETEC Taquarituba</td>
+            <td>Técnico em Infomática</td>
+            <td>2011</td>
+            <td>2012</td>
+        </tr>
+    </table>
+    <h2>
+        Interesses.
+    </h2>
+    <ul>
+        <li>Apaixonado por tecnologia;</li>
+        <li>Futebol(Assistir e jogar);</li>
+        <li>Video Games;</li>
+        <li>Sertanejo e Rap.</li>
+    </ul>
+    <a href="https://www.facebook.com/andrehenrique.santos.5/" target="_blank" >Facebook</a><br>
+    <a href="https://www.linkedin.com/in/andre-henrique-dos-santos-113bb11b1/" target="_blank" >Linkedin</a><br>
+    <a href="https://www.instagram.com/andrehesantos/" target="_blank" >Instagram</a><br>
+    <a href="https://github.com/andrehesantos" target="_blank" >GitHub</a><br>
 </body>
 </html>
